--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "serve": "vue-cli-service serve",
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
+        "@vue/cli-service": "^5.0.8",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "bootstrap": "^5.3.3",
         "vue-router": "^4.4.5"
     }
 }
